--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
                     <div class="commission-table--container">
                         <table>
                             <tr>
-                                <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$12.96 </td>
                             </tr>
                             <tr>
-                                <td>Ethereum</td>
-                                <td class="table__right">$0.07 <span class="up"></span></td>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$13.07</td>
                             </tr>
                             <tr>
-                                <td>Ripple</td>
-                                <td class="table__right">$2.17 <span class="down"></span></td>
+                                <td>Novadax</td>
+                                <td class="table__right">$13.15 </td>
                             </tr>
                             <tr>
-                                <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right">$4.96 <span class="down"></span></td>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$14.96 </td>
                             </tr>
                         </table>
                     </div>
@@ -92,7 +92,39 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparación</h2>
+                <p>Confiable y diseñado para su uso diario</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más
+                        determinan el comportamiento.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batatabit siempre te muestra el
+                        costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="dollar"></span>
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No más rumores, con Batatabit sabrás el valor real de cada moneda en
+                        el mercado actual.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="check-circle"></span>
+                    <p class="product--card-title">Información confiable</p>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su
+                        contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
