--- a/index.html
+++ b/index.html
@@ -135,12 +135,30 @@
             </div>
             <section class="plans-container--slider">
                 <article class="plans-container--card">
-                    <p class="recommended">Recomendado</p>
+                    <p class="recommended">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Plan Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>15</p>
+                        <p class="plan-card-saving">* Disfruta nuestros servicios por un mes</p>
+                        <button class="plan-card-ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recommended2">Expert</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Plan Semestral</h3>
+                        <p class="plan-card--price"><span>$</span>70</p>
+                        <p class="plan-card-saving">* Ahorras $20 comparado al plan mensual</p>
+                        <button class="plan-card-ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="recommended3">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Anual</h3>
-                        <p class="plan-card--price"><span>$</span>99</p>
-                        <p class="plan-card-saving">* Ahorras $129 comparado al plan mensual</p>
-                        <button class="plan-card-ca">Escoger este <span>a</span></button>
+                        <p class="plan-card--price"><span>$</span>110</p>
+                        <p class="plan-card-saving">* Ahorras $30 comparado al plan semestral</p>
+                        <button class="plan-card-ca">Escoger este <span></span></button>
                     </div>
                 </article>
             </section>
