--- a/index.html
+++ b/index.html
@@ -165,7 +165,16 @@
         </section>
     </main>
     <footer>
-
+        <section class="left">
+            <ul>
+                <li> <a href="#">Linkedin</a> </li>
+                <li> <a href="https://github.com/AngeloB9" target="_blank">GitHub</a> </li>
+                <li> <a href="#">Hackernews</a> </li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2021" />
+        </section>
     </footer>
 </body>
 
