--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
 </head>
 
 <body>
@@ -144,15 +145,6 @@
                     </div>
                 </article>
                 <article class="plans-container--card">
-                    <p class="recommended2">Expert</p>
-                    <div class="plan-info-container">
-                        <h3 class="plan-card--title">Plan Semestral</h3>
-                        <p class="plan-card--price"><span>$</span>70</p>
-                        <p class="plan-card-saving">* Ahorras $20 comparado al plan mensual</p>
-                        <button class="plan-card-ca">Escoger este <span></span></button>
-                    </div>
-                </article>
-                <article class="plans-container--card">
                     <p class="recommended3">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Anual</h3>
@@ -161,6 +153,16 @@
                         <button class="plan-card-ca">Escoger este <span></span></button>
                     </div>
                 </article>
+                <article class="plans-container--card">
+                    <p class="recommended2">Expert</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Plan Semestral</h3>
+                        <p class="plan-card--price"><span>$</span>70</p>
+                        <p class="plan-card-saving">* Ahorras $20 comparado al plan mensual</p>
+                        <button class="plan-card-ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+
             </section>
         </section>
     </main>
